Update minion image source in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
     <div class="container" id="mainCard">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHIyeGZ1NmZ4eXJ5eXJ5eXJ5eXJ5eXJ5eXJ5eXJ5eXJ5eXJ5JmFjdGlvbj1jbGljayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/iS99GvK8pIsBv7FvYF/giphy.gif" alt="Minion" id="minionImg">
+        <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTA0c2ptZTNjZDJjZTU1ZjFqbzIxbWVzZG14dzZyeWgwZmN5d3I5cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/hjvBoWTABwwNi/giphy.gif" alt="Minion" id="minionImg">
         <h1 id="pregunta">Me regalas 100$ en efectivo?</h1>
         
         <div class="buttons" id="btnGroup">
