--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
             background-color: #ffebee;
             font-family: 'Arial', sans-serif;
             text-align: center;
-            overflow: hidden;
+            overflow: hidden; /* Evita que la pantalla se mueva cuando el botón huye */
             touch-action: manipulation;
         }
 
         .container {
             background: white;
-            padding: 30px;
+            padding: 25px;
             border-radius: 20px;
             box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-            position: relative;
-            width: 80%;
+            width: 85%;
             max-width: 350px;
             z-index: 1;
         }
 
         img {
-            width: 180px;
+            width: 160px;
             border-radius: 10px;
         }
 
@@ -40,13 +39,13 @@
             margin: 20px 0;
         }
 
-        .buttons {
+        .buttons-wrapper {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px;
-            margin-top: 20px;
-            min-height: 100px;
+            gap: 15px; /* Espacio inicial entre botones */
+            margin-top: 10px;
+            min-height: 150px; /* Espacio para que el Sí crezca sin mover todo */
         }
 
         button {
@@ -57,28 +56,23 @@
             border: none;
             border-radius: 12px;
             transition: transform 0.2s ease;
-            touch-action: none; /* Evita que el celular haga scroll al tocar */
         }
 
         #btnSi {
             background-color: #4caf50;
             color: white;
-            z-index: 999;
+            z-index: 100; /* Siempre por encima */
         }
 
         #btnNo {
             background-color: #f44336;
             color: white;
-            position: relative;
-            z-index: 998;
+            z-index: 99;
+            /* Eliminamos 'position: absolute' de aquí para que sea visible al inicio */
         }
     </style>
 </head>
 <body>
 
     <div class="container" id="mainCard">
-        <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTA0c2ptZTNjZDJjZTU1ZjFqbzIxbWVzZG14dzZyeWgwZmN5d3I5cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/hjvBoWTABwwNi/giphy.gif" alt="Minion" id="minionImg">
-        <h1 id="pregunta">¿Me regalas 100$ en efectivo? 💵</h1>
-        
-        <div class="buttons">
-            <button id="btnSi">Sí</button
+        <img src="
